test/typecheck/errors/complex-arrays3.boa
a3: array of map[string] of int;
